WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161663
[iOS] WebKit2 fails to build with iOS 10 beta SDK - "'UIWKTextInteractionAssistant' may not respond to 'selectAll:'"
https://bugs.webkit.org/show_bug.cgi?id=161663
Summary
[iOS] WebKit2 fails to build with iOS 10 beta SDK - "'UIWKTextInteractionAssi...
Daniel Bates
Reported
2016-09-06 17:46:02 PDT
When I build WebKit2 using the iOS 10 beta SDK I got the following error: .../Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1965:30: error: 'UIWKTextInteractionAssistant' may not respond to 'selectAll:' [-Werror] 1 error generated.
Attachments
Patch
(1.63 KB, patch)
2016-09-06 17:49 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2016-09-06 17:49:04 PDT
Created
attachment 288074
[details]
Patch
Daniel Bates
Comment 2
2016-09-06 17:51:10 PDT
Comment on
attachment 288074
[details]
Patch Clearing flags on attachment: 288074 Committed
r205531
: <
http://trac.webkit.org/changeset/205531
>
Daniel Bates
Comment 3
2016-09-06 17:51:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug