[iOS] WebKit2 fails to build with iOS 10 beta SDK - "'UIWKTextInteractionAssistant' may not respond to 'selectAll:'" https://bugs.webkit.org/show_bug.cgi?id=161663

Reviewed by Darin Adler.

The UIResponderStandardEditActions extensions, including the selectAll: message, are now
part of a formal protocol by the same name as of the iOS 10 beta SDK.

* Platform/spi/ios/UIKitSPI.h:

Canonical link: https://commits.webkit.org/179847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205531 268f45cc-cd09-0410-ab3c-d52691b4dbfc